--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "require-dir": "^0.1.0",
     "run-sequence": "^1.1.2",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
-    "wiredep": "^2.2.2"
+    "vinyl-source-stream": "^1.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
